Remove hidden from Events, as it duplicates behavior of is_private
